# TypicalX11App

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Makefile.clang++  Makefile.g++  README.txt  ReadMe.txt  TypicalX11App.cpp  TypicalX11App.h  TypicalX11App.xpm  TypicalX11AppMask.xbm  config.h  config.h.in
projects/: Makefile.clang++32  Makefile.clang++64  Makefile.g++32  Makefile.g++64
